# homework7

./: alembic.ini  homework7.py  my_select.py  pyproject.toml  seed.py  table.py  test.db
migration/: env.py
migration/versions/: 4e044914e4ea_init.py
