[tool.poetry]
name = "homework7"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Zdorovets Boris <bor.zdorovets28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
faker = "^28.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
